<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_300"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBarProfile"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/yellow_300"
                    app:title="@string/title_profile" />
            </com.google.android.material.appbar.AppBarLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/blue_900"
                android:visibility="gone"
                android:elevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible"/>

            <FrameLayout
                android:id="@+id/frameProfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/profileImageView"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/bg_circle"
                        android:contentDescription="@string/profile_image"
                        android:scaleType="centerCrop"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@drawable/ic_baseline_person_24" />

                    <TextView
                        android:id="@+id/tvUserName"
                        style="@style/TextContent.Body.Bold"
                        android:layout_marginTop="8dp"
                        android:text="@string/user_name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/profileImageView" />

                    <TextView
                        android:id="@+id/tvStatisticsTitle"
                        style="@style/TextContent.Heading.Bold"
                        android:layout_marginTop="32dp"
                        android:padding="8dp"
                        android:text="@string/statictics_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvUserName" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/statisticsCardView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvStatisticsTitle">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <ImageView
                                    android:id="@+id/ivExp"
                                    android:layout_width="48dp"
                                    android:layout_height="48dp"
                                    android:contentDescription="@string/badge_exp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:srcCompat="@drawable/exp_icon" />

                                <TextView
                                    android:id="@+id/tvLevel"
                                    style="@style/TextContent.SubHeading.Bold"
                                    android:layout_marginStart="16dp"
                                    android:text="@string/level"
                                    app:layout_constraintStart_toEndOf="@+id/ivExp"
                                    app:layout_constraintTop_toTopOf="@+id/ivExp" />

                                <TextView
                                    android:id="@+id/experience"
                                    style="@style/TextContent.Caption"
                                    android:layout_marginStart="16dp"
                                    android:text="@string/exp"
                                    app:layout_constraintStart_toEndOf="@+id/ivExp"
                                    app:layout_constraintTop_toBottomOf="@id/tvLevel" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <FrameLayout
                                android:id="@+id/frameStatistics"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:background="@drawable/bg_full_rounded_blue">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="16dp">

                                    <TextView
                                        android:id="@+id/tvCorrectAnswer"
                                        style="@style/TextContent.Body"
                                        android:text="@string/total_quiz_title"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent" />

                                    <TextView
                                        android:id="@+id/tvTotalQuiz"
                                        style="@style/TextContent.Body.Bold"
                                        android:text="@string/total_quiz"
                                        app:layout_constraintBottom_toBottomOf="@+id/tvCorrectAnswer"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintTop_toTopOf="@id/tvCorrectAnswer" />


                                    <TextView
                                        android:id="@+id/tvSuccessRateTitle"
                                        style="@style/TextContent.Body"
                                        android:layout_marginTop="8dp"
                                        android:text="@string/success_rate_title"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toBottomOf="@+id/tvTotalQuiz" />

                                    <TextView
                                        android:id="@+id/tvSuccessRate"
                                        style="@style/TextContent.Body.Bold"
                                        android:text="@string/success_rate"
                                        app:layout_constraintBottom_toBottomOf="@+id/tvSuccessRateTitle"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintTop_toTopOf="@+id/tvSuccessRateTitle" />

                                    <TextView
                                        android:id="@+id/tvSumTitle"
                                        style="@style/TextContent.Caption"
                                        android:layout_marginStart="16dp"
                                        android:layout_marginTop="8dp"
                                        android:text="@string/sum_title"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toBottomOf="@+id/tvSuccessRateTitle" />

                                    <TextView
                                        android:id="@+id/tvSumRate"
                                        style="@style/TextContent.Caption.Bold"
                                        android:layout_marginTop="8dp"
                                        android:text="@string/sum_rate"
                                        app:layout_constraintBottom_toBottomOf="@+id/tvSumTitle"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintTop_toTopOf="@+id/tvSumTitle" />

                                    <TextView
                                        android:id="@+id/tvSubtractTitle"
                                        style="@style/TextContent.Caption"
                                        android:layout_marginStart="16dp"
                                        android:layout_marginTop="8dp"
                                        android:text="@string/subtract_title"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toBottomOf="@+id/tvSumTitle" />

                                    <TextView
                                        android:id="@+id/tvSubtractRate"
                                        style="@style/TextContent.Caption.Bold"
                                        android:text="@string/subtract_rate"
                                        app:layout_constraintBottom_toBottomOf="@+id/tvSubtractTitle"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintTop_toTopOf="@+id/tvSubtractTitle" />

                                    <TextView
                                        android:id="@+id/tvMultiplyTitle"
                                        style="@style/TextContent.Caption"
                                        android:layout_marginStart="16dp"
                                        android:layout_marginTop="8dp"
                                        android:text="@string/multiply_title"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toBottomOf="@+id/tvSubtractTitle" />

                                    <TextView
                                        android:id="@+id/multiply_rate"
                                        style="@style/TextContent.Caption.Bold"
                                        android:text="@string/multiply_rate"
                                        app:layout_constraintBottom_toBottomOf="@+id/tvMultiplyTitle"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintTop_toTopOf="@+id/tvMultiplyTitle" />

                                    <TextView
                                        android:id="@+id/tvDivideTitle"
                                        style="@style/TextContent.Caption"
                                        android:layout_marginStart="16dp"
                                        android:layout_marginTop="8dp"
                                        android:text="@string/divide_title"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toBottomOf="@+id/tvMultiplyTitle" />

                                    <TextView
                                        android:id="@+id/tvDivideRate"
                                        style="@style/TextContent.Caption.Bold"
                                        android:text="@string/divide_rate"
                                        app:layout_constraintBottom_toBottomOf="@+id/tvDivideTitle"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintTop_toTopOf="@+id/tvDivideTitle" />

                                </androidx.constraintlayout.widget.ConstraintLayout>
                            </FrameLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <Button
                        android:id="@+id/logout_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="48dp"
                        android:layout_marginBottom="92dp"
                        app:backgroundTint="@null"
                        android:background="@drawable/bg_button_secondary"
                        android:text="@string/logout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/statisticsCardView" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>