<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/yellow_300"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/skip_button"
        style="@style/TextContent.Caption"
        android:textColor="@color/blue_800"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:text="@string/skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:max="100"
        android:progress="0"
        android:progressBackgroundTint="@color/white"
        android:progressTint="@color/blue_800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skip_button" />

    <ImageView
        android:id="@+id/on_boarding_image"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:contentDescription="@string/onboarding_image"
        android:padding="16dp"
        android:src="@drawable/on_boarding_1"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginBottom="0dp"
        android:paddingBottom="32dp"
        android:background="@drawable/bg_rounded"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/on_boarding_text"
            style="@style/TextContent.LargeDisplay.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/onboarding_text1"
            android:textColor="#000000" />

        <Button
            android:id="@+id/next_button"
            style="@style/PrimaryButtonStyle"
            android:layout_gravity="bottom"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_button_primary"
            app:backgroundTint="@null"
            android:text="@string/next" />
    </FrameLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="248dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="138dp" />
</androidx.constraintlayout.widget.ConstraintLayout>